--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Github Trending</title>
     <link rel="stylesheet" href="./index.scss" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
