--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Github Dashboard</title>
+    <title>OctoLenses - Github Dashboard</title>
     <link rel="stylesheet" href="./index.scss" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
