--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container"></div>
-    <script type="text/javascript" src="index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
 </body>
 
 </html>
